--- a/calendar_app/AutoDoc/templates/AutoDoc/calendar.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/calendar.html
@@ -417,16 +417,16 @@
         </tbody>
     </table>
 
-    <div class="legend">
-        <div class="legend-item">
-            <div class="legend-color legend-today"></div>
-            <span>Сегодня</span>
-        </div>
-        <div class="legend-item">
-            <div class="legend-color legend-assignment"></div>
-            <span>Наличие записи</span>
-        </div>
-    </div>
+<!--    <div class="legend">-->
+<!--        <div class="legend-item">-->
+<!--            <div class="legend-color legend-today"></div>-->
+<!--            <span>Сегодня</span>-->
+<!--        </div>-->
+<!--        <div class="legend-item">-->
+<!--            <div class="legend-color legend-assignment"></div>-->
+<!--            <span>Наличие записи</span>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
