--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -335,9 +335,10 @@
                                         {% endfor %}
                                     </select>
                                     <div class="invalid-feedback">Пожалуйста, выберите исполнителя</div>
-                                    <button type="button" class="btn btn-danger remove-work-btn" style="display: none;">
+                                    <button type="button" class="btn btn-danger remove-work-btn">
                                         <i class="fas fa-times"></i>
                                     </button>
+                                    
                                 </div>
                             </div>
                        </div>
