--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -665,7 +665,7 @@
                             <option value="{{ person.id }}">{{ person.full_name }}</option>
                         {% endfor %}
                     </select>
-                    <button type="button" class="btn btn-danger remove-work-btn" style="display: none;">
+                    <button type="button" class="btn btn-danger remove-work-btn">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
