--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -525,7 +525,7 @@
                                     <div class="assignment-actions">
                                         <button type="button" class="btn btn-danger btn-sm"
                                                 onclick="deleteAssignment({{ assignment.id }})">
-                                            <i class="fas fa-trash">Удалить</i>
+                                            <i class="fas fa-trash"></i> Удалить
                                         </button>
                                     </div>
                                 </div>
@@ -661,7 +661,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label for="description" class="form-label">Описание</label>
-                                <textarea class="form-control" id="description" name="description" placeholder="Введите описание" rows="4" cols="50">
+                                <textarea class="form-control" id="description" name="description" rows="2" cols="50">
                                 </textarea>
                             </div>
                             <div class="col-md-6">
@@ -773,7 +773,8 @@
                             </div>
                             <div class="col-md-6">
                                 <label for="edit_description" class="form-label">Описание</label>
-                                <input type="text" class="form-control" id="edit_description" name="description" placeholder="Введите описание">
+                                <textarea class="form-control" id="description" name="description" rows="2" cols="50">
+                                </textarea>
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">Дата и время</label>
