--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -773,7 +773,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label for="edit_description" class="form-label">Описание</label>
-                                <textarea class="form-control" id="description" name="description" rows="2" cols="50">
+                                <textarea class="form-control" id="edit_description" name="description" rows="2" cols="50">
                                 </textarea>
                             </div>
                             <div class="col-md-6">
