--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -654,7 +654,7 @@
                                 <label for="person_id" class="form-label">Сотрудник</label>
                                 <input type="text" class="form-control" id="person_id" name="person_id" list="personOptions" placeholder="Выберите сотрудника" required>
                                 <datalist id="personOptions">
-                                    {% for person in persons %}
+                                    {% for person in persons_status_true %}
                                         <option value="{{ person.full_name }}" data-id="{{ person.id }}"></option>
                                     {% endfor %}
                                 </datalist>
@@ -766,7 +766,7 @@
                                 <label for="edit_person_id" class="form-label">Сотрудник</label>
                                 <input type="text" class="form-control" id="edit_person_id" name="person_id" list="personOptions" placeholder="Выберите сотрудника" required>
                                 <datalist id="personOptions">
-                                    {% for person in persons %}
+                                    {% for person in persons_status_true %}
                                         <option value="{{ person.full_name }}" data-id="{{ person.id }}"></option>
                                     {% endfor %}
                                 </datalist>
