--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -691,7 +691,7 @@
                                     <input type="text" class="form-control" id="work_id_0" name="work_ids[]" list="workOptions" placeholder="Выберите работу">
                                     <select class="form-select work-employee-select" name="work_employees[]" required>
                                         <option value="">Выберите сотрудника</option>
-                                        {% for person in persons %}
+                                        {% for person in persons_status_true %}
                                             <option value="{{ person.id }}">{{ person.full_name }}</option>
                                         {% endfor %}
                                     </select>
@@ -823,7 +823,7 @@
                 <input type="text" class="form-control edit-work-id" list="workOptions" placeholder="Выберите работу">
                 <select class="form-select edit-work-employee" required>
                     <option value="">Выберите сотрудника</option>
-                    {% for person in persons %}
+                    {% for person in persons_status_true %}
                         <option value="{{ person.id }}">{{ person.full_name }}</option>
                     {% endfor %}
                 </select>
